tests/dbg_cases/imports/errors/dbg_import_error_collision/test.csm
// Test importing same function name from different files
#import add from "./math1.csm"
#import add from "./math2.csm"

i32 main() {
    return 0;
}
